# waifu

./: .env_example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: api_reference.md
src/: auth.rs  cache.rs  config.rs  error.rs  handlers.rs  limiter.rs  main.rs  middleware.rs  models.rs  store.rs
