[package]
name = "waifu"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { version = "1.7", features = ["v4"] }
clap = { version = "4.5", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true