[package]
name = "waifu"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "fs"] }
warp = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { version = "1.7", features = ["v4"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
time = { version = "0.3", features = ["macros", "local-offset", "serde", "parsing"] }
image = "0.24"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
url = "2.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true